--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -1,8 +1,4 @@
-/* Sticky footer styles
--------------------------------------------------- */
-
-html,
-body {
+html,body {
     height: 100%;
     /* The html and body elements cannot have any padding or margin. */
 }
@@ -12,13 +8,22 @@ body {
     min-height: 100%;
     height: auto;
     /* Negative indent footer by its height */
-    margin: 0 auto -30px;
+    margin: 0 auto -60px;
     /* Pad bottom by footer height */
-    padding: 0 0 30px;
+    padding: 0 0 60px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-    height: 30px;
+    height: 60px;
     background-color: #f5f5f5;
+}
+
+#wrap > .container {
+    padding: 60px 15px 0;
+}
+
+#footer > .container {
+    padding-left: 15px;
+    padding-right: 15px;
 }
